--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   go-vm:
     image: go-vm:latest
     restart: always
-      environment:
-        HOST: vcenter.domain.tld
-        USERID: username
-        PASSWORD: password
+    environment:
+        HOST: "vcenter.domain.tld"
+        USERID: "username"
+        PASSWORD: "password"
     ports:
       - "8080:8080"
